--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
   "dependencies": {
-    "better-sqlite3": "^7.6.2",
-    "eslint-config-next": "^13.0",
-    "next": "^13.0",
-    "react": "^18.2",
-    "react-dom": "^18.2"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "@remix-run/node": "^1.8.0",
+    "@remix-run/react": "^1.8.0",
+    "@remix-run/serve": "^1.8.0",
+    "better-sqlite3": "^8.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "@remix-run/dev": "^1.8.0"
   }
 }
