--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.8.0"
+    "@remix-run/dev": "^1.8.0",
+    "@tailwindcss/cli": "^0.1.2",
+    "tailwindcss": "^3.2.4"
   }
 }
