--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@remix-run/node": "^1.8.0",
     "@remix-run/react": "^1.8.0",
     "@remix-run/serve": "^1.8.0",
+    "@tailwindcss/typography": "^0.5.8",
     "better-sqlite3": "^8.0.1",
+    "marked": "^4.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
