--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DB_PATH=signario.db
 SQLITE_EXT=snTokenizer
 VID_PATH=Cortes
 SNOWBALL_EXT=fts5-snowball/fts5stemmer.so
+UPLOAD_TOKEN=supersecretstringtoken
