--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ SQLITE_EXT=snTokenizer
 VID_PATH=Cortes
 SNOWBALL_EXT=fts5-snowball/fts5stemmer.so
 UPLOAD_TOKEN=supersecretstringtoken
+HOST=127.0.0.1
+PORT=3000
