--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "devDependencies": {
     "@remix-run/dev": "^1.9.0",
     "@tailwindcss/cli": "^0.1.2",
+    "autoprefixer": "^10.4.13",
+    "postcss-cli": "^10.1.0",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^10.2.0",
     "tailwindcss": "^3.2.4"
   }
 }
