--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "@remix-run/serve": "^1.9.0",
     "@tailwindcss/typography": "^0.5.8",
     "better-sqlite3": "^8.0.1",
-    "marked": "^4.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -13,9 +12,11 @@
     "@remix-run/dev": "^1.9.0",
     "@tailwindcss/cli": "^0.1.2",
     "autoprefixer": "^10.4.13",
+    "marked": "^4.2.4",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^10.2.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "signotator": "file:../signotator"
   }
 }
