--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^10.2.0",
-    "tailwindcss": "^3.2.4",
-    "signotator": "file:../signotator"
+    "tailwindcss": "^3.2.4"
   }
 }
