finish migration to elasticsearch

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 DB_PATH=signario.db
-SQLITE_EXT=snTokenizer
 VID_PATH=Cortes
-SNOWBALL_EXT=fts5-snowball/fts5stemmer.so
 UPLOAD_TOKEN=supersecretstringtoken
+ELASTICSEARCH_URL=http://127.0.0.1:9200
 HOST=127.0.0.1
 PORT=3000
