elasticsearch prod deployment fixes

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,6 @@ DB_PATH=signario.db
 VID_PATH=Cortes
 UPLOAD_TOKEN=supersecretstringtoken
 ELASTICSEARCH_URL=http://127.0.0.1:9200
+ELASTICSEARCH_PASSWORD=changeme
 HOST=127.0.0.1
 PORT=3000
